e2e/linodemachine-controller/linodemachine-vpcref-integration/check-vpc-lm-deletion.yaml
---
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
kind: LinodeMachine
metadata:
  name: ($cluster)
---
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
kind: LinodeVPC
metadata:
  name: ($vpc)
