e2e/linodemachine-controller/linodemachine-vpcref-integration/create-cluster-vpc.yaml
---
apiVersion: cluster.x-k8s.io/v1beta1
kind: Cluster
metadata:
    name: ($cluster)
spec:
    controlPlaneRef:
        apiVersion: controlplane.cluster.x-k8s.io/v1beta1
        kind: KubeadmControlPlane
        name: ($cluster)
    infrastructureRef:
        apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
        kind: LinodeCluster
        name: ($cluster)
---
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
kind: LinodeCluster
metadata:
    name: ($cluster)
spec:
    region: us-sea
---
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
kind: LinodeVPC
metadata:
    name: ($vpc)
    labels:
       cluster.x-k8s.io/cluster-name: ($cluster)
spec:
    region: us-sea
    subnets:
        - label: test-subnet
          ipv4: 10.0.0.0/24
