e2e/linodemachine-controller/linodemachine-vpcref-integration/create-linodemachine.yaml
---
apiVersion: controlplane.cluster.x-k8s.io/v1beta1
kind: KubeadmControlPlane
metadata:
    name: ($cluster)
spec:
    kubeadmConfigSpec:
        clusterConfiguration:
            apiServer:
                extraArgs:
                    - name: "cloud-provider"
                      value: "external"
            controllerManager:
                extraArgs:
                    - name: "cloud-provider"
                      value: "external"
    machineTemplate:
        infrastructureRef:
            apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
            kind: LinodeMachineTemplate
            name: ($cluster)
    replicas: 1
    version: 1.29.1
---
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
kind: LinodeMachineTemplate
metadata:
    name: ($cluster)
spec:
    template:
        spec:
            region: us-sea
            type: g6-nanode-1
            vpcRef:
                kind: LinodeVPC
                name: ($vpc)
